Trying postgresql database

--- a/Templates/home.html
+++ b/Templates/home.html
@@ -84,7 +84,7 @@
             </a>
         </div>
         <div class="category">
-            <img src="{% static 'images/toy.jpg' %}" alt="Toy  Image">
+            <img src="{% static 'images/toy.jpythpg' %}" alt="Toy  Image">
             <a href ="/products">
                 <div class="layer">
                     <h3>Toys</h3>
