Tryint to import photos

--- a/Templates/AboutUs.html
+++ b/Templates/AboutUs.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="developer-col">
-                <img src="{% static 'images/aimen.jpeg' %}" alt="Developer">
+                <img src="{% static 'Images/aimen.jpeg' %}" alt="Developer">
 
                 <div class="developer-overlay">
                     <div class="content-about">
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="developer-col">
-                <img src="{% static 'images/maryam.jpeg' %}" alt="Developer">
+                <img src="{% static 'Images/maryam.jpeg' %}" alt="Developer">
                 <div class="developer-overlay">
                     <div class="content-about">
                         <h3>Maryam Naveed</h3>
