Its fucking working finally

--- a/Templates/AboutUs.html
+++ b/Templates/AboutUs.html
@@ -42,7 +42,7 @@
         <h3>Developers</h3>
         <div class = "developer-row">
             <div class="developer-col">
-                <img src="{% static 'images/user1.jpg' %}" alt="Developer">
+                <img src="{% static 'Images/user1.jpg' %}" alt="Developer">
                 <div class="developer-overlay">
                     <div class="content-about">
                         <h3>Hanan Munir</h3>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="developer-col">
-                <img src="{% static 'images/ayesha.jpeg' %}" alt="Developer">
+                <img src="{% static 'Images/ayesha.jpeg' %}" alt="Developer">
                 <div class="developer-overlay">
                     <div class="content-about">
                         <h3>Ayesha Rashid</h3>
@@ -87,7 +87,7 @@
 
             </div>
             <div class="developer-col">
-                <img src="{% static 'images/marwa.jpeg' %}" alt="Developer">
+                <img src="{% static 'Images/marwa.jpeg' %}" alt="Developer">
                 <div class="developer-overlay">
                     <div class="content-about">
                         <h3>Marwa Khalid</h3>
