--- a/Templates/Product/search_product.html
+++ b/Templates/Product/search_product.html
@@ -61,7 +61,7 @@
 
     <div class="categories">
       <div class = "category">
-        <img src="{% static 'images/img3.jpg' %}" alt="Clothing Image" >
+        <img src="{% static 'Images/img3.jpg' %}" alt="Clothing Image" >
         <a href ="/products">
           <div class = "layer" >
             <h3> Clothes</h3>
@@ -69,7 +69,7 @@
         </a>
       </div>
       <div class="category">
-        <img src="{% static 'images/img4.jpg' %}" alt="Toy  Image">
+        <img src="{% static 'Images/img4.jpg' %}" alt="Toy  Image">
         <a href ="/products">
           <div class="layer">
             <h3>Toys</h3>
@@ -77,7 +77,7 @@
         </a>
       </div>
       <div class="category">
-        <img src= "{% static 'images/img8.jpg' %}" alt="Apparel Image" >
+        <img src= "{% static 'Images/img8.jpg' %}" alt="Apparel Image" >
         <a href ="/products">
           <div class="layer">
             <h3> Apparels</h3>
@@ -86,7 +86,7 @@
 
       </div>
       <div class="category">
-        <img src= "{% static 'images/img5.jpg' %}" alt="Jewelary Image">
+        <img src= "{% static 'Images/img5.jpg' %}" alt="Jewelary Image">
         <a href ="/products">
           <div class="layer">
             <h3> Jewelary</h3>
@@ -94,7 +94,7 @@
         </a>
       </div>
       <div class="category">
-        <img src= "{% static 'images/img9.jpg' %}" alt="Computer Accessories Image">
+        <img src= "{% static 'Images/img9.jpg' %}" alt="Computer Accessories Image">
         <a href ="/products">
           <div class="layer">
             <h3> Computer Accessories</h3>
@@ -103,7 +103,7 @@
       </div>
 
       <div class="category">
-        <img src= "{% static 'images/img2.jpg' %}" alt="Books Image">
+        <img src= "{% static 'Images/img2.jpg' %}" alt="Books Image">
         <a href ="/products" >
           <div class="layer">
             <h3> Books  </h3>
