--- a/Templates/home.html
+++ b/Templates/home.html
@@ -76,7 +76,7 @@
     <p>Shop in different categories</p>
     <div class="categories">
         <div class = "category">
-            <img src="{% static 'images/Clothes3.jpg' %}" alt="Clothing Image" >
+            <img src="{% static 'Images/Clothes3.jpg' %}" alt="Clothing Image" >
             <a href ="/products">
                 <div class = "layer" >
                     <h3> Clothes</h3>
@@ -92,7 +92,7 @@
             </a>
         </div>
         <div class="category">
-            <img src= "{% static 'images/apparel.jpg' %}" alt="Apparel Image" >
+            <img src= "{% static 'Images/apparel.jpg' %}" alt="Apparel Image" >
             <a href ="/products">
                 <div class="layer">
                     <h3> Apparels</h3>
@@ -101,7 +101,7 @@
 
         </div>
         <div class="category">
-            <img src= "{% static 'images/jewelary.jpg' %}" alt="Jewelary Image">
+            <img src= "{% static 'Images/jewelary.jpg' %}" alt="Jewelary Image">
             <a href ="/products">
                 <div class="layer">
                     <h3> Jewelary</h3>
@@ -109,7 +109,7 @@
             </a>
         </div>
         <div class="category">
-            <img src= "{% static 'images/computer2.jpg' %}" alt="Computer Accessories Image">
+            <img src= "{% static 'Images/computer2.jpg' %}" alt="Computer Accessories Image">
             <a href ="/products">
                 <div class="layer">
                     <h3> Computer Accessories</h3>
@@ -118,7 +118,7 @@
         </div>
 
         <div class="category">
-            <img src= "{% static 'images/books.jpg' %}" alt="Books Image">
+            <img src= "{% static 'Images/books.jpg' %}" alt="Books Image">
             <a href ="/products" >
                 <div class="layer">
                     <h3> Books  </h3>
