Updates the rest of image urls

--- a/Templates/home.html
+++ b/Templates/home.html
@@ -84,7 +84,7 @@
             </a>
         </div>
         <div class="category">
-            <img src="{% static 'images/toy.jpythpg' %}" alt="Toy  Image">
+            <img src="{% static 'Images/toy.jpg' %}" alt="Toy  Image">
             <a href ="/products">
                 <div class="layer">
                     <h3>Toys</h3>
@@ -92,7 +92,7 @@
             </a>
         </div>
         <div class="category">
-            <img src= "{% static 'Images/apparel.jpg' %}" alt="Apparel Image" >
+            <img src= "{% static 'Images/Apparel.jpg' %}" alt="Apparel Image" >
             <a href ="/products">
                 <div class="layer">
                     <h3> Apparels</h3>
