Updates the rest of image urls

--- a/Templates/home.html
+++ b/Templates/home.html
@@ -164,7 +164,7 @@
     <div class="row">
 
         <div class="testimony-col">
-            <img src= "{% static 'images/user2.jpg' %}" alt="User 1">
+            <img src= "{% static 'Images/user2.jpg' %}" alt="User 1">
             <div class = "testimony">
                 <p>I found my favorite Marvel merchandise here. The service was good
                     and everything was professional. I'm really happy to shop here.
@@ -180,7 +180,7 @@
 
 
         <div class="testimony-col">
-            <img src= "{% static 'images/user1.jpg' %}" alt="User 2">
+            <img src= "{% static 'Images/user1.jpg' %}" alt="User 2">
             <div class = "testimony">
                 <p>I wanted a poster from "The 100", and I easily found it here. I'm really
                     glad they have a specific site for fandom merchandise.
