--- a/Templates/Product/product_view.html
+++ b/Templates/Product/product_view.html
@@ -36,6 +36,9 @@
 
         <!-- reviews -->
         <section id="card-container" class="more-product-section">
+             <div class="button">
+                <a href = "/cart" class="userinfo-button">Cart</a>
+  </div>
             <h1>Results</h1>
             <h3 style = "font-size : 32px; font-weight: 500; padding: 70px 0 70px 0;">
                 {% for message in messages %}
