--- a/Templates/Product/product_detailed_view.html
+++ b/Templates/Product/product_detailed_view.html
@@ -29,15 +29,15 @@
 
             </div>
             <div class="description-container">
-                <h1>{{product.title}}</h1>
+                <h1 class= "product-title-div">{{product.title}}</h1>
                 <br>
-                <h2 style = "color: #51c4d3; opacity: 0.8; font-weight: 600" >{{product.special_note}}</h2>
+                <h2 style = "color: #51c4d3; opacity: 0.8; font-weight: 600" class= "product-title-div">{{product.special_note}}</h2>
                 <br>
 
 
 
                 <h4>Product Details</h4>
-                <p>{{product.specifications}}
+                <p class= "product-title-div">{{product.specifications}}
                 </p>
 
                 <br>
@@ -59,40 +59,11 @@
                 <i class="fa fa-star"></i>
             </div>
             <h4>Description</h4>
-            <p> {{product.description}}
+            <p class = "product-description-div"> {{product.description}}
             </p>
         </div>
     </sec>
-    <script>
-    var slideIndex = 1;
-    showSlides(slideIndex);
 
-    function plusSlides(n) {
-      showSlides(slideIndex += n);
-    }
-
-    function currentSlide(n) {
-      showSlides(slideIndex = n);
-    }
-
-    function showSlides(n) {
-      var i;
-      var slides = document.getElementsByClassName("mySlides");
-      var dots = document.getElementsByClassName("demo");
-      var captionText = document.getElementById("caption");
-      if (n > slides.length) { slideIndex = 1 }
-      if (n < 1) { slideIndex = slides.length }
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex - 1].style.display = "block";
-      dots[slideIndex - 1].className += " active";
-      captionText.innerHTML = dots[slideIndex - 1].alt;
-    }
-  </script>
 
     {% endblock %}
 
