--- a/Templates/Product/search_product.html
+++ b/Templates/Product/search_product.html
@@ -15,6 +15,9 @@
   {% endblock %}
 
   {% block text %}
+
+
+  </div>
   <div class="banner">
     <div class="container">
       <h1>FANDOM</h1>
@@ -37,8 +40,11 @@
   {% block body %}
 
 
-  <!-- reviews -->
+
   <section id="card-container" class="more-product-section">
+    <div class="button">
+                <a href = "/cart" class="userinfo-button">Cart</a>
+  </div>
     <h1>Products</h1>
     <div class="card-title">
 
