Changed file storage to S3 buckets

--- a/Templates/Order/review_product.html
+++ b/Templates/Order/review_product.html
@@ -19,7 +19,7 @@
     <section class = "product-review-section">
         <div class="review-div1">
             <div class="review-review">
-                <h1>&#8592; Write Review</h1>
+                <h1 ><a style ="text-decoration: none;" href = "../../"><span style = "cursor: pointer; ">&#8592;</span></a> Write Review</h1>
             </div>
 
             <div class="review-search">
@@ -37,7 +37,7 @@
         <div class="review-mug" >
             <img src ="{{product.imageURL}}">
             <div>
-                 <p align="left"><b>{{product.title}}</b><br>{{product.specification}}<p>
+                 <p align="left"><b>{{product.title}}</b><br>{{product.specifications}}<p>
             <p align="left"><p>
             </div>
 
