Turned off debugging

--- a/Templates/home.html
+++ b/Templates/home.html
@@ -73,7 +73,7 @@
 <!----Categories---->
 <section class="category-container">
     <h1>Categories</h1>
-    <p>Shop in different categories</p>
+    <p>Shop with our different categories</p>
     <div class="categories">
         <div class = "category">
             <img src="{% static 'Images/Clothes3.jpg' %}" alt="Clothing Image" >
