--- a/Templates/home.html
+++ b/Templates/home.html
@@ -8,8 +8,9 @@
     <title>Fandom Store</title>
     {% endblock %}
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel='stylesheet' type='text/css' media='screen' href="{% static 'css/site.css' %}?{% now 'U' %}">
     <script type = "text/javascript">
@@ -229,6 +230,8 @@
 <script src= "{% static 'js/cart.js' %}"></script>
 <script>
         $(document).ready(function(){
+
+
 
                 $("#product-id").hide();
              $('#review-button').click(function () {
