--- a/Templates/account.html
+++ b/Templates/account.html
@@ -17,7 +17,7 @@
     <div class="text-box">
 
         <h1>Hello,</h1>
-        <p>{{user.customer.get_name}}<br><br>We hope you are doing fine</p>
+        <p>{{user.customer.get_name}}<br><br>We hope you are having a good day.</p>
 
         <a href = "/accounts/logout">Log out</a>
 
