--- a/Templates/edit_personal_info.html
+++ b/Templates/edit_personal_info.html
@@ -43,7 +43,7 @@
 
 
             <div class="clearfix">
-                <button type="button" class="cancelbtn">Cancel</button>
+                <a href = "../accounts"><button type="button" class="cancelbtn">Cancel</button></a>
                 <button type="submit" class="signupbtn">Save</button>
             </div>
         </form>
