cancel btn fixed

--- a/Templates/edit_address.html
+++ b/Templates/edit_address.html
@@ -276,7 +276,7 @@
             <input value = "{{customer.address.street_address}}" class = "login-input" type="text" id = "address" placeholder="Address" name="address" required>
 
             <div class="clearfix">
-                <a href = "../accounts"><button type="button" class="cancelbtn">Cancel</button></a>
+                <button type="button" id = "edit-cancel-btn" class="cancelbtn">Cancel</button>
                 <button type="submit" class="signupbtn">Save</button>
             </div>
         </form>
